@@ -10,6 +10,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Add a public view of test results by going to result page entry -> Result Export -> Public Viewer
 - phoromatic: Add basic "Upload To OpenBenchmarking.org" link from test result page
 - phoromatic: Allow users to reset their own password by navigating to the settings page
+- phoromatic: Add "group name" concept to Phoromatic group of accounts
 
 Phoronix Test Suite 5.6 Milestone 1
 13 January 2015
